# hiblav2

./: .env  .replit  AUTOMATION_DEPLOYMENT_SUMMARY.md  CLOAKED_DOMAIN_FIX.md  COMPREHENSIVE_FEATURE_PLAN.md  COMPREHENSIVE_TODO.md  CONSOLIDATED_NAVIGATION_DESIGN.md  CRITICAL_BUG_FIX.md  DOCUMENT_AUTOMATION_SYSTEM.md  END_TO_END_TEST_RESULTS.md  FRONTEND_WIREFRAME.md  HIBLA_WEBAPP_QUOTATION.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_PLAN.md  MANAGEMENT_PAGES_TODO.md  MISSING_FEATURES_ANALYSIS.md  MISSING_FEATURES_ROADMAP.md  NAVIGATION_CONSOLIDATION_SUMMARY.md  PHILIPPINE_SPA_FEATURES.md  PROCESS_FLOW_VISUAL.md  PRODUCTION_DEPLOYMENT.md  PROJECT_CLEANUP_AUDIT.md  PROJECT_STATUS.md  QUOTATION_ACTIONS_BRAINSTORM.md  QUOTATION_SYSTEM_IMPLEMENTATION.md  SALON_TRANSFORMATION_SUMMARY.md  UI_CONSOLIDATION_COMPLETE.md  UI_UX_DASHBOARD_ANALYSIS.md  USER_JOURNEY_ANALYSIS.md  USER_JOURNEY_FLOW.md  agent_communication_summary.md  agent_zero_interface.py  automation_controller.py  automation_status_report.py  build.sh  bulk-image-generation.js  check_pareng_boyong_response.py  deploy.js  document_generation_service.py  feature-test.sh  (+54 more)
attached_assets/: HIBLA WebBase System-2_1755283590031.docx  HIBLA WebBase System_1754510903815.docx  Pasted-Business-Management-System-Requirements-QUOTATION-MODULE-Required-Fields-Date-Automatic-Quot-1756193118458_1756193118458.txt  Pasted-Front-End-Iteration-Improvement-Recommendations-1-UI-UX-Enhancements-Consistent-Branding-Update--1755331992153_1755331992153.txt  client_requirements.txt  (+6 more)
client/: .env  index.html
server/: admin-portal-service.ts  (+66 more)
(+272 files in other folders)
