[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "flask>=3.1.1",
    "psutil>=7.0.0",
    "python-docx>=1.2.0",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "sseclient>=0.0.27",
    "sseclient-py>=1.8.0",
]
